# agentic-memories

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Agentic_Memories_Orchestrator.postman_collection.json  CHANGELOG.md  CHATBOT_INTEGRATION_GUIDE.md  CLEAN_REBUILD_PLAN.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_DATA_SOURCES.md  CONTRIBUTING.md  DEBUG.md  Dockerfile  LANGFUSE_IMPLEMENTATION.md  LICENSE  MIGRATION_ROBUSTNESS_ENHANCEMENTS.md  Makefile  PHASE2_REMAINING_FIXES.md  README.md  README_CONTRAST.md  README_DETAILED.md  RETRIEVAL_OVERHAUL_PLAN.md  SCHEMA_AUDIT_FINAL.md  SECURITY.md  V2_IMPLEMENTATION_STATUS.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  env.example  postman_curl_commands.md  pyproject.toml  pytest.ini  requirements.txt  restructure_v2.md  run_docker.sh  run_evals.sh  test_orchestrator_scenario.sh  test_profile_extraction.py  test_request.json
.gemini/: config.yaml  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.scrum/: status.md
config/: hooks.yml
docs/: CHANGE_AUDIT.md  PRD.md  api-contracts-server.md  architecture.md  bmm-index.md  bmm-workflow-status.yaml  component-inventory-client.md  data-models-server.md  design-direct-memory-api.md  epic-10-direct-memory-api.md  epic-5-scheduled-intents.md  epic-6-intents-api-alignment.md  epic-cloud-logging.md  epic-extraction-quality.md  epic-ingestion-optimization.md  epic-memory-primitives.md  epic-neo4j-removal.md  epics.md  project-scan-report.json  source-tree-analysis.md
migrations/: 001_create_episodic_memories.sql  001_timescale_episodic.sql  README.md  (+17 more)
(+337 files in other folders)
